# IQOP-API-JOHNBARZOLA

./: .env.example  .gitignore  CHANGELOG.md  INTEGRATION.md  README.md  commit.txt  config.yaml.example  coverage.json  debug_digital.py  debug_init.json  diag_init.txt  extract_assets.py  open_time.json  pyproject.toml  pyrefly.toml  requirements-dev.txt  requirements.txt  scratch_diagnostics_groups.py  scratch_stress_test_D1.py  setup.py  test_digital_formats.py  verify_digital_trading.py
.github/workflows/: ci.yml
data/journal/: trades_2026-04-24.jsonl  trades_2026-04-28.jsonl
docs/: api-reference.md  architecture.md  stealth-guide.md  testing-guide.md
docs/archive/: integration_report_20260425_085836.md  integration_report_20260425_091813.md  margin_trading_protocol.md  ws_endpoints_catalog.md
docs/reports/: catalog_alignment_20260427.md  integration_report_20260425_085230.md  integration_report_20260425_090814.md  session_scheduler_audit.md  stealth_certification_20260428.md  ws_gap_analysis_20260428.md
examples/: 01_basic_connection.py  02_buy_binary.py  03_buy_digital.py  04_candle_stream.py  05_multiasset_robot.py  06_research_blitz.py  README.md  debug_actives_kyc_map.json  debug_all_init.json  debug_events_map.py  debug_instruments_crypto.json  debug_instruments_forex.json  debug_open_time.json  debug_raw_payload.py  debug_sprint12.py  debug_sprint13.py  hft_showcase_jcbv.py
examples/practice_suite/: config.py  report.py  runner.py  suite_A_infrastructure.py  suite_B_account.py  suite_C_market_data.py  suite_D_candles.py  suite_E_binary_options.py  suite_F_digital_options.py  suite_G_cfd_orders.py  suite_H_reconnect.py  suite_I_cleanup.py
iqoptionapi/: __init__.py  api.py  asset_scanner.py  async_api.py  candle_cache.py  circuit_breaker.py  config.py  health.py  ip_rotation.py  logger.py  market_quality.py  martingale_guard.py  performance.py  ratelimit.py  reconciler.py  reconnect.py  security.py  session_scheduler.py  signal_consensus.py  stable_api.py  subscription_manager.py  time_sync.py  trade_journal.py  utils.py  validator.py
iqoptionapi/backtest/: __init__.py  engine.py
iqoptionapi/bot/: __init__.py  orchestrator.py
iqoptionapi/cli/: __init__.py  config_loader.py  main.py
iqoptionapi/core/: __init__.py  asset_taxonomy.py  config.py  idempotency.py  orchestrator.py  ratelimit.py  reconnect.py  security.py
iqoptionapi/http/: httpx_client.py  instruments.py  login.py  send_sms.py  session.py  verify.py
iqoptionapi/mixins/: __init__.py  management_mixin.py  orders_mixin.py  positions_mixin.py  streams_mixin.py
iqoptionapi/strategy/: __init__.py  base.py  correlation_engine.py  indicators.py  market_quality.py  market_regime.py  mtf_pipeline.py  mtf_snapshot.py  pattern_engine.py  registry.py  server_indicator_bridge.py  signal.py  signal_consensus.py
iqoptionapi/ws/: client.py
scratch/: audit_assets.py  brute_digital.py  capture_init.py  captured_init.json  certify_digital.py  check_digital.py  check_ws_pings.py  compare_kyc.py  debug_blitz_ws.py  debug_profile_assets.py  debug_raw_ws.py  decode_digital_frame.py  diagnose_assets.py  dump_digital.py  dump_init.py  find_assets.py  find_digital_ids.py  find_open.py  full_init.json  full_init_data.json  inspect_init.py  margin_trading_test_log.txt  open_time.json  parse_ws_logs10.py  parse_ws_logs11.py  parse_ws_logs2.py  parse_ws_logs4.py  parse_ws_logs6.py  parse_ws_logs7.py  probe_types.py  results.txt  sanitize_pii.py  scratch_diagnostics2.py  scratch_diagnostics_init.py  sprint2_session2_verify.py  stealth_stress_test.py  stress_concurrent_instruments.py  stress_test_10trades.py  test_blitz_only.py  test_check_win_v2.py  (+24 more)
scratch/logs/: diag_output_utf8.txt
tests/: conftest.py  jcbv_test_runner.py  sprint3_runner.py  test_autoreconnect.py  test_candle_cache.py  test_signal_consensus.py  test_spinloop_migration.py  test_strategy.py  test_validator.py
tests/examples/: debug_all_init_v2.json  debug_brute_force.py  debug_raw_payload.py  debug_sprint11.py  research_blitz_cross.py
tests/fixtures/: debug_dump_init.py  debug_instruments_cfd.json  debug_instruments_turbo-option.json  debug_msg_instruments.json  debug_msg_result.json  debug_reconnect.py
tests/integration/: conftest.py  jcbv_test_runner.py  test_clock.py  test_clock_resync.py  test_connection.py  test_digital_clean.py  test_digital_cp.py  test_digital_local.py  test_digital_quotes.py  test_digital_quotes_v3.py  test_digital_segment.py  test_digital_types.py  test_digital_underlying.py  test_digital_usdcop.py  test_digital_v4.py  test_digital_v4_short.py  test_eurusd_otc_binary.py  test_full.py  test_full_flow.py  test_idempotency.py  test_init_v3.py  test_margin_trading.py  test_order_lifecycle.py  test_raw.py  test_reconnect_forced.py  test_stealth_verify.py
tests/jcbv_gallery/: jcbv_suite_00_connection.py  jcbv_suite_01_marketdata.py  jcbv_suite_04_binarytrading.py  jcbv_suite_05_digitaltrading.py  jcbv_suite_07_accountoperations.py  jcbv_suite_08_assetresolution.py  jcbv_suite_10_idempotency.py  jcbv_suite_11_ratelimit.py  jcbv_suite_12_tls_session.py
tests/live/: LIVE_VALIDATION_REPORT.md  TRADING_VALIDATION_REPORT_A.md  TRADING_VALIDATION_REPORT_B.md  check_hb.py  live_validation_suite.py  test_conn.py  trading_validation_suite.py
tests/practice_suite/: config.py  report.py  runner.py  suite_C_market_data.py  suite_D_candles.py  suite_E_binary_options.py  suite_F_digital_options.py  suite_G_cfd_orders.py  suite_H_reconnect.py  suite_I_cleanup.py  suite_J_blitz.py  suite_L_http_instruments.py
tests/regression/: test_event_stores.py
tests/reports/: cfd_cert_20260427.md  cfd_kyc_status_20260427.md  init_v2_structure_20260428.md  integration_report_20260425_090238.md  integration_report_20260425_090515.md  integration_report_20260425_091212.md  integration_report_20260425_091450.md  margin_trading_test_20260428.md  sprint10_fix_baseline.txt  sprint3_stress_20260427.md  ws_gap_analysis_20260428.md
tests/scratch/: README.md  analyze_handlers.py  ast_mover.py  brute_variations.py  brute_variations_trace.py  (+38 more)
(+254 files in other folders)
