[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iqoptionapi"
version = "8.9.2"
description = "IQ Option API JCBV Wrapper (Modernized Asynchronous Edition)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JCBV Developer / JCBV", email = "developer@example.com"}
]
urls = {Homepage = "https://github.com/johnblack593/IQOP-API-JOHNBARZOLA"}
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.8.0",
    "certifi>=2024.2.2",
    "pyOpenSSL>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "black>=24.2.0",
    "isort>=5.13.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools]
packages = ["iqoptionapi"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E266", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["iqoptionapi"]
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyrefly]
project_root = "."
python_version = "3.11"
search_path = ["iqoptionapi"]
exclude = ["examples/**", "tests/**", "**/__pycache__/**", "**/*.pyc"]

[tool.pyrefly.suppress]
parse-error = false
unknown-name = false
