[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqoptionapi"
version = "9.1.000"
description = "IQ Option API wrapper with market intelligence for trading robots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "JCBV Developer", email = "developer@example.com" }
]
keywords = ["iqoption", "trading", "api", "binary-options", "algorithmic-trading"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "websocket-client>=1.9.0",
    "requests>=2.31.0",
    "httpx[http2]>=0.28.1",
    "h2>=4.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "python-dotenv>=1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iqoptionapi*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "F401", "E711", "E712", "E701", "W291", "W293", "F821", "F841", "E741", "E721", "W191", "E722", "F811", "E401", "E731", "F405", "F403"]
# F401 ignorado: imports legacy en __init__.py
# E711/E712 ignorado: comparaciones legacy (is None, == True) en código existente

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
