[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqoptionapi"
version = "9.1.000"
description = "IQ Option API wrapper with market intelligence for trading robots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "JCBV Developer", email = "developer@example.com" }
]
keywords = ["iqoption", "trading", "api", "binary-options", "algorithmic-trading"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "websocket-client>=1.9.0",
    "requests>=2.31.0",
    "httpx[http2]>=0.28.1",
    "h2>=4.3.0",
    "numpy>=1.26.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
analytics = ["pyarrow>=14.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "python-dotenv>=1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iqoptionapi*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
# Solo ignorar reglas que son estilo o legacy irrecuperable:
ignore = [
    "E501",   # línea larga — aceptable en código legacy
    "E711",   # comparison to None (legacy: x == None)
    "E712",   # comparison to True/False (legacy)
    "E701",   # multiple statements on one line (legacy)
    "W291",   # trailing whitespace (cosmético)
    "W293",   # whitespace before operator (cosmético)
    "E741",   # ambiguous variable name (legacy: l, O, I)
    "E721",   # type comparison (legacy: type(x) == int)
    "W191",   # indentation contains tabs (legacy)
    "E722",   # bare except (legacy)
    "E401",   # multiple imports (legacy)
    "E731",   # lambda assignment (legacy)
]

[tool.ruff.lint.per-file-ignores]
# Solo para el código legacy que no podemos modificar ahora:
"iqoptionapi/stable_api.py"   = ["F401", "F811", "F821", "F841", "F403", "F405"]
"iqoptionapi/api.py"          = ["F403", "F405"]
"iqoptionapi/core/__init__.py" = ["F403", "F405"]
"iqoptionapi/__init__.py"     = ["F401", "F811", "F403", "F405"]
# Tests: permitir wildcard imports y re-imports:
"tests/**/*.py"               = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["iqoptionapi"]
omit = [
    "iqoptionapi/__init__.py",
    "iqoptionapi/country_id.py",
]

[tool.coverage.report]
# Baseline: 55.47% — 2026-05-03 (unit tests only)
# Integration tests run separately (job: integration-test)
# fail_under activation: S6 — after indicators coverage added
# fail_under = 70  ← descomentar en S6
show_missing = true
